# ai-bootcamp

./: .gitignore  pyproject.toml  section-5.ipynb
1-Langgraph Basics/: basic_chatbot.ipynb  simplegraph.ipynb
4- Workflows/: 1-prompting_chaining.ipynb  2-parallelization.ipynb  3-Routing.ipynb  4-orchestrator-worker.ipynb  5-Evaluator-optimizer.ipynb
5-HumanintheLoop/: 1-Humanintheloop.ipynb
Debugging Langgraph/3-Debugging/: langgraph.json  openai_agent.py
LangGraph Components/: 1-streaming.ipynb  3-DataclassStateSchema.ipynb  4-pydantic.ipynb  5-ChainsLangGraph.ipynb  6-chatbotswithmultipletools.ipynb  7-ReActAgents.ipynb
RAG with LangGraph/: 1-AgenticRAG.ipynb  2-CorrectiveRAG.ipynb  4-AdaptiveRAG.ipynb
resources/1.1-openai/: 1.1.1-GettingStarted.ipynb  1.1.2-Simpleapp.ipynb
resources/3.2-DataIngestion/: 3.2-DataIngestion.ipynb
resources/3.3-Data Trnasformer/: 3.3-RecuriveCharactertextsplitter.ipynb  3.4-CharacterTextsplitter.ipynb  3.5-HTMLtextsplitter.ipynb  3.6-RecursiveJsonSplitter.ipynb
resources/4-Embeddings/: 4.1-embedding.ipynb  4.2-ollamaemnedding.ipynb
resources/5-VectorStore/: 5.2-Chroma.ipynb
resources/6-VectorRetriever/: VectorRetriever.ipynb
resources/8-Building Agents With Conversation History/: 1-chatbots.ipynb
resources/LCEL/: serve.py  simplellmLCEL.ipynb
